--- a/src/app/asset/asset-history/asset-history.component.html
+++ b/src/app/asset/asset-history/asset-history.component.html
@@ -1,5 +1,5 @@
 <!--<button (click)="exportToExcel()" mat-flat-button color="primary" >Export As Excel</button> <br><br>-->
-<div class="container">
+<div class="">
   <table>
     <tr>
       <td>
@@ -30,39 +30,39 @@
     <!-- Name Column -->
     <ng-container matColumnDef="empId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> empId</th>
-      <td mat-cell *matCellDef="let element"> {{element.employee.empId}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.employee?.empId}} </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Name</th>
-      <td mat-cell *matCellDef="let element"> {{element.employee.firstName}} {{element.employee.lastName}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.employee?.firstName}} {{element.employee?.lastName}} </td>
     </ng-container>
 
     <!--<ng-container matColumnDef="location">
       <th mat-header-cell *matHeaderCellDef> Location</th>
-      <td mat-cell *matCellDef="let element"> {{element.employee.location}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.employee?.location}} </td>
     </ng-container>
 
     <ng-container matColumnDef="costCenter">
       <th mat-header-cell *matHeaderCellDef> Cost Center</th>
-      <td mat-cell *matCellDef="let element"> {{element.employee.costCenter}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.employee?.costCenter}} </td>
     </ng-container>
 
 
     <ng-container matColumnDef="productLine">
       <th mat-header-cell *matHeaderCellDef> Product Line</th>
-      <td mat-cell *matCellDef="let element"> {{element.employee.productLine}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.employee?.productLine}} </td>
     </ng-container>-->
 
     <ng-container matColumnDef="jobRole">
       <th mat-header-cell *matHeaderCellDef> Job Role</th>
-      <td mat-cell *matCellDef="let element"> {{element.employee.jobRole}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.employee?.jobRole}} </td>
     </ng-container>
 
     <!--<ng-container matColumnDef="technology">
       <th mat-header-cell *matHeaderCellDef> Technology</th>
-      <td mat-cell *matCellDef="let element"> {{element.employee.technology}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.employee?.technology}} </td>
     </ng-container>-->
 
     <ng-container matColumnDef="ram">
