--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,10 +8,18 @@
         <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
           Asset's <i class="fa fa-laptop" aria-hidden="true"></i><span class="caret"></span></a>
         <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-          <a class="dropdown-item waves-light" mdbWavesEffect href="/asset/history"><i class="fa fa-list" aria-hidden="true"></i> History</a>
-          <a class="dropdown-item waves-light" mdbWavesEffect href="/asset/create"><i class="fa fa-plus" aria-hidden="true"></i> Add Asset </a>
-          <a class="dropdown-item waves-light" mdbWavesEffect href="/#"><i class="fa fa-check-square-o" aria-hidden="true"></i> Assign Asset </a>
-          <a class="dropdown-item waves-light" mdbWavesEffect href="/asset/summary"><i class="fa fa-pie-chart" aria-hidden="true"></i> Asset Summary</a>
+          <a class="dropdown-item waves-light" mdbWavesEffect href="/asset/history"><i class="fa fa-list"
+                                                                                       aria-hidden="true"></i>
+            History</a>
+          <a class="dropdown-item waves-light" mdbWavesEffect href="/asset/create"><i class="fa fa-plus"
+                                                                                      aria-hidden="true"></i> Add Asset
+          </a>
+          <a class="dropdown-item waves-light" mdbWavesEffect href="/asset/assign"><i class="fa fa-check-square-o"
+                                                                                      aria-hidden="true"></i> Assign to
+            Employee </a>
+          <a class="dropdown-item waves-light" mdbWavesEffect href="/asset/summary"><i class="fa fa-pie-chart"
+                                                                                       aria-hidden="true"></i> Asset
+            Summary</a>
         </div>
       </li>
 
@@ -19,8 +27,10 @@
         <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
           Employee's <i class="fa fa-laptop" aria-hidden="true"></i><span class="caret"></span></a>
         <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-          <a class="dropdown-item waves-light" mdbWavesEffect href="/#"><i class="fa fa-list" aria-hidden="true"></i> List All Employees</a>
-          <a class="dropdown-item waves-light" mdbWavesEffect href="/#"><i class="fa fa-plus" aria-hidden="true"></i> Add Employee </a>
+          <a class="dropdown-item waves-light" mdbWavesEffect href="/#"><i class="fa fa-list" aria-hidden="true"></i>
+            List All Employees</a>
+          <a class="dropdown-item waves-light" mdbWavesEffect href="/#"><i class="fa fa-plus" aria-hidden="true"></i>
+            Add Employee </a>
         </div>
       </li>
 
@@ -44,8 +54,10 @@
 
           <a class="dropdown-item waves-light" mdbWavesEffect *ngIf="!isLogedIn; else logOut" href="login">Login</a>
           <ng-template #logOut>
-            <a class="dropdown-item waves-light" mdbWavesEffect href="#"><i class="fa fa-file-text-o" aria-hidden="true"></i> Profile</a>
-            <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout()"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
+            <a class="dropdown-item waves-light" mdbWavesEffect href="#"><i class="fa fa-file-text-o"
+                                                                            aria-hidden="true"></i> Profile</a>
+            <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout()"><i class="fa fa-sign-out"
+                                                                                      aria-hidden="true"></i> Logout</a>
           </ng-template>
         </div>
       </li>
