--- a/src/app/asset/asset-list/asset-list.component.html
+++ b/src/app/asset/asset-list/asset-list.component.html
@@ -1,33 +1,18 @@
 <!--<button (click)="exportToExcel()" mat-flat-button color="primary" >Export As Excel</button> <br><br>-->
-<div class="">
-  <table>
-    <tr>
-      <td>
-        <mat-form-field>
-          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter i.e. Serial No/Asset Tag/Hostname">
-        </mat-form-field>
-      </td>
-      <!--<td>
-        <mat-form-field>
-          <mat-label>Asset Status</mat-label>
-          <mat-select (selectionChange)="applyFilter($event.value)">
-            <mat-option *ngFor="let status of statuses" [value]="status">
-              {{status}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </td>-->
-    </tr>
-  </table>
-</div>
+<table>
+  <tr>
+    <td>
+      <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)"
+               placeholder="Filter i.e. Serial No/Asset Tag/Hostname">
+      </mat-form-field>
+    </td>
+    <td>
+      <button mat-flat-button color="primary" (click)="assignAsset()" class="align-right">Assign To Employee</button>
+    </td>
+  </tr>
+</table>
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z18">
-
-  <ng-container matColumnDef="sNo">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> sNo</th>
-    <td mat-cell *matCellDef="let element"> {{element.sno}} </td>
-  </ng-container>
-
-
   <ng-container matColumnDef="ram">
     <th mat-header-cell *matHeaderCellDef> RAM (in GB)</th>
     <td mat-cell *matCellDef="let element"> {{element.ram}} </td>
@@ -50,25 +35,28 @@
 
   <ng-container matColumnDef="isUnderWarranty">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Under Warranty</th>
-    <td mat-cell *matCellDef="let element"> {{(element.isUnderWarranty) ? 'Yes' : 'No'}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.underWarranty + ''}} </td>
   </ng-container>
 
   <ng-container matColumnDef="isDamaged">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Damaged</th>
-    <td mat-cell *matCellDef="let element"> {{(element.isDamaged) ? 'Yes' : 'No'}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.damaged + ''}} </td>
   </ng-container>
 
   <ng-container matColumnDef="isRepaired">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Repaired</th>
-    <td mat-cell *matCellDef="let element"> {{(element.isRepaired) ? 'Yes' : 'No'}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.repaired + ''}} </td>
   </ng-container>
 
   <ng-container matColumnDef="assetTag">
-    <th mat-header-cell *matHeaderCellDef  mat-sort-header> Asset Tag</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Asset Tag</th>
     <td mat-cell *matCellDef="let element"> {{element.assetTag}} </td>
   </ng-container>
 
-
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Asset Status</th>
+    <td mat-cell *matCellDef="let element"> --</td>
+  </ng-container>
 
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef> Action</th>
@@ -81,7 +69,11 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+      (click)="selection.toggle(row)"
+      [ngClass]="{hovered: row.hovered, highlighted: selection.isSelected(row)}"
+      (mouseover)="row.hovered = true" (mouseout)="row.hovered = false">
+  </tr>
 </table>
 
 <mat-paginator [pageSizeOptions]="[10, 25, 100, 200]"></mat-paginator>
