--- a/src/app/shared/dialog/dialog.component.html
+++ b/src/app/shared/dialog/dialog.component.html
@@ -1,111 +1,134 @@
-<h1 mat-dialog-title> UPdate</h1>
+<h1 mat-dialog-title> Assign Asset to Employee</h1>
 <div mat-dialog-content>
   <div>{{message}}</div>
   <br>
-  <form [formGroup]="assetForm" class="asset-form" autocomplete="off" novalidate
-        (ngSubmit)="createAssetEntry(assetForm.value)"
+  <form [formGroup]="assetAssignForm" class="asset-form" autocomplete="off" novalidate
+        (ngSubmit)="assetAssign(assetAssignForm.value)"
         fxLayout="column wrap"
-        fxLayoutAlign="center center" fxLayoutGap="10px">
+        fxLayoutAlign="center" fxLayoutGap="10px">
     <mat-card-content>
-
-
-      <table class="full-width" cellspacing="0">
-        <tr>
-          <td>
-            <!-- Asset Details -->
-            <mat-form-field class="full-width">
-              <input matInput type="text" placeholder="Model" [(ngModel)]="data.model" formControlName="model" id="model">
-              <mat-error *ngIf="hasError('model', 'required')">model is required</mat-error>
-            </mat-form-field>
-          </td>
-        </tr>
-      </table>
-
-      <table class="full-width" cellspacing="0">
-        <tr>
-          <td> <!-- Asset Details -->
-            <mat-form-field class="full-width">
-              <input matInput type="text" placeholder="RAM" [(ngModel)]="data.ram" formControlName="ram" id="ram">
-              <mat-error *ngIf="hasError('ram', 'required')">ram is required</mat-error>
-            </mat-form-field>
-          </td>
-          <td> <!-- Employee Details-->
-            <mat-form-field class="full-width">
-              <input matInput type="text" placeholder="Serial Number" [(ngModel)]="data.serialNumber" formControlName="serialNumber"
-                     id="serialNumber">
-              <mat-error *ngIf="hasError('serialNumber', 'required')">serialNumber is required</mat-error>
-            </mat-form-field>
-
-          </td>
-          <td>
-
-            <mat-form-field class="full-width">
-              <input matInput type="text" placeholder="Asset Tag" [(ngModel)]="data.assetTag" formControlName="assetTag" id="assetTag">
-              <mat-error *ngIf="hasError('assetTag', 'required')">assetTag is required</mat-error>
-            </mat-form-field>
-          </td>
-        </tr>
-      </table>
-
-      <table class="full-width" cellspacing="0">
+      <!-- Asset Status -->
+      <table>
         <tr>
           <td>
             <mat-form-field class="full-width">
-              <input matInput type="text" placeholder="Hostname" [(ngModel)]="data.hostname" formControlName="hostname" id="hostname">
-            </mat-form-field>
-          </td>
-          <td>
-            <mat-form-field class="full-width">
-              <input matInput [matDatepicker]="picker" [(ngModel)]="data.dateOfPurchase" placeholder="Date Allocated" formControlName="dateAllocated"
-                     id="dateAllocated"
-                     readonly (click)="picker.open()">
-              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-          </td>
-        </tr>
-      </table>
-
-      <table class="full-width" cellspacing="0">
-        <tr>
-          <td>
-            <mat-form-field class="full-width">
-              <mat-label>Status</mat-label>
-              <mat-select formControlName="isUnderWarranty"
-                          id="isUnderWarranty">
-                <mat-option value="true">Yes</mat-option>
-                <mat-option value="false">No</mat-option>
+              <mat-label>Asset Allocation Status</mat-label>
+              <mat-select formControlName="assetStatus"
+                          (selectionChange)="setVibilityForEmployeeList($event)"
+                          id="assetStatus">
+                <mat-option value="ALLOCATED">Allocated</mat-option>
+                <mat-option value="INVENTORY">Inventory</mat-option>
+                <mat-option value="INVENTORY_NOT_WORKING">Inventory - Not Working</mat-option>
               </mat-select>
+              <mat-error *ngIf="hasError('assetStatus', 'required')">Select Asset Status.
+              </mat-error>
             </mat-form-field>
           </td>
-
           <td>
-            <mat-form-field class="full-width">
-              <mat-label>Status</mat-label>
-              <mat-select formControlName="isDamaged"
-                          id="isDamaged">
-                <mat-option value="true">Yes</mat-option>
-                <mat-option value="false">No</mat-option>
-              </mat-select>
-            </mat-form-field>
+            <!-- Date Of Allocated -->
+            <div *ngIf="selectedAssetStatus == 'ALLOCATED' else anotherBlock">
+              <mat-form-field class="full-width">
+                <input matInput [matDatepicker]="picker" placeholder="Date of Allocated"
+                       formControlName="dateOfAllocated"
+                       id="dateOfAllocated"
+                       readonly (click)="picker.open()">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
+            </div>
+            <!-- //Date Of Allocated-->
+
+            <!-- Date Of Return -->
+            <ng-template #anotherBlock>
+              <mat-form-field class="full-width">
+                <input matInput [matDatepicker]="picker" placeholder="Date of Return" formControlName="dateOfReturn"
+                       id="dateOfReturn"
+                       readonly (click)="picker.open()">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
+            </ng-template>
+            <!-- //Date Of Return-->
+
           </td>
+        </tr>
+      </table>
+      <!-- //Asset Status -->
 
+      <table class="full-width" cellspacing="0">
+        <tr>
           <td>
             <mat-form-field class="full-width">
-              <mat-label>Status</mat-label>
-              <mat-select formControlName="isRepaired"
-                          id="isRepaired">
-                <mat-option value="true">Yes</mat-option>
-                <mat-option value="false">No</mat-option>
-              </mat-select>
+              <input matInput type="text" placeholder="Remark" formControlName="remark" id="remark">
             </mat-form-field>
           </td>
         </tr>
       </table>
+
+
+      <div *ngIf="selectedAssetStatus == 'ALLOCATED'" class="mat-elevation-z8">
+        <mat-form-field>
+          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+        </mat-form-field>
+        <!-- Employee List -->
+        <table mat-table [dataSource]="dataSource" matSort>
+
+          <!-- ID Column -->
+          <ng-container matColumnDef="empId">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID</th>
+            <td mat-cell *matCellDef="let row"> {{row.empId}} </td>
+          </ng-container>
+
+          <!-- Fullname Column -->
+          <ng-container matColumnDef="fullName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fullname</th>
+            <td mat-cell *matCellDef="let row"> {{row.firstName + ' ' + row.lastName}} </td>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="location">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Location</th>
+            <td mat-cell *matCellDef="let row"> {{row.location}} </td>
+          </ng-container>
+
+          <!-- Cost Center Column -->
+          <ng-container matColumnDef="costCenter">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Cost Center</th>
+            <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.costCenter}} </td>
+          </ng-container>
+
+          <!-- productLine Column -->
+          <ng-container matColumnDef="productLine">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Product Line</th>
+            <td mat-cell *matCellDef="let row" [style.color]="row.productLine"> {{row.productLine}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="jobRole">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Job Role</th>
+            <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.jobRole}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="technology">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Technology</th>
+            <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.technology}} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+              (click)="selection.toggle(row)"
+              [ngClass]="{hovered: row.hovered, highlighted: selection.isSelected(row)}"
+              (mouseover)="row.hovered = true" (mouseout)="row.hovered = false">
+          </tr>
+        </table>
+        <!-- //Employee List -->
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100, 200]"></mat-paginator>
+      </div>
     </mat-card-content>
     <mat-card-actions align="center">
-      <button mat-raised-button color="primary" [disabled]="!assetForm.valid" [mat-dialog-close]="data.model" cdkFocusInitial>Summit</button>
-      <button mat-button (click)="onNoClick()">Cancel</button>
+      <button mat-raised-button color="primary"
+              cdkFocusInitial>Assign
+      </button>
+      <button mat-button (click)="onCancel()">Cancel</button>
     </mat-card-actions>
   </form>
 </div>
