--- a/src/app/asset/asset-history/asset-history.component.html
+++ b/src/app/asset/asset-history/asset-history.component.html
@@ -1,7 +1,9 @@
-<!--<button (click)="exportToExcel()" mat-flat-button color="primary" >Export As Excel</button> <br><br>-->
 <div class="">
   <table>
     <tr>
+      <td>
+        <button (click)="exportToExcel()" mat-flat-button color="primary" >Export As Excel</button>
+      </td>
       <td>
         <mat-form-field>
             <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter i.e. Serial No/Asset Tag/Hostname">
@@ -39,65 +41,39 @@
       <td mat-cell *matCellDef="let element"> {{element.employee?.firstName}} {{element.employee?.lastName}} </td>
     </ng-container>
 
-    <!--<ng-container matColumnDef="location">
-      <th mat-header-cell *matHeaderCellDef> Location</th>
-      <td mat-cell *matCellDef="let element"> {{element.employee?.location}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="costCenter">
-      <th mat-header-cell *matHeaderCellDef> Cost Center</th>
-      <td mat-cell *matCellDef="let element"> {{element.employee?.costCenter}} </td>
-    </ng-container>
-
-
-    <ng-container matColumnDef="productLine">
-      <th mat-header-cell *matHeaderCellDef> Product Line</th>
-      <td mat-cell *matCellDef="let element"> {{element.employee?.productLine}} </td>
-    </ng-container>-->
-
     <ng-container matColumnDef="jobRole">
       <th mat-header-cell *matHeaderCellDef> Job Role</th>
       <td mat-cell *matCellDef="let element"> {{element.employee?.jobRole}} </td>
     </ng-container>
 
-    <!--<ng-container matColumnDef="technology">
-      <th mat-header-cell *matHeaderCellDef> Technology</th>
-      <td mat-cell *matCellDef="let element"> {{element.employee?.technology}} </td>
-    </ng-container>-->
-
     <ng-container matColumnDef="ram">
       <th mat-header-cell *matHeaderCellDef> RAM (in GB)</th>
-      <td mat-cell *matCellDef="let element"> {{element.ram}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.asset.ram}} </td>
     </ng-container>
 
     <ng-container matColumnDef="model">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Model</th>
-      <td mat-cell *matCellDef="let element"> {{element.model}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.asset.model}} </td>
     </ng-container>
 
     <ng-container matColumnDef="serialNumber">
       <th mat-header-cell *matHeaderCellDef> Serial Number</th>
-      <td mat-cell *matCellDef="let element"> {{element.serialNumber}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.asset.serialNumber}} </td>
     </ng-container>
 
     <ng-container matColumnDef="assetTag">
       <th mat-header-cell *matHeaderCellDef  mat-sort-header> Asset Tag</th>
-      <td mat-cell *matCellDef="let element"> {{element.assetTag}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.asset.assetTag}} </td>
     </ng-container>
 
     <ng-container matColumnDef="dateAllocated">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Date Allocated</th>
-      <td mat-cell *matCellDef="let element"> {{element.dateAllocated | date : 'dd/MM/yyyy'}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.dateOfAllocated | date : 'dd/MM/yyyy'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="dateOfReturned">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Date of Returned</th>
-      <td mat-cell *matCellDef="let element"> {{element.dateReturned | date : 'dd/MM/yyyy'}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="hostname">
-      <th mat-header-cell *matHeaderCellDef> Hostname</th>
-      <td mat-cell *matCellDef="let element"> {{element.hostname}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.dateOfReturn | date : 'dd/MM/yyyy'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
@@ -108,12 +84,7 @@
 
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> Action</th>
-      <td mat-cell *matCellDef="let element">
-        <i class="action-icon fa fa-edit" (click)="editRecord(element)"></i>
-<!--        <i class="action-icon fa fa-trash" (click)="deleteElement(element.sno)"></i>-->
-        <i class="action-icon fa fa-trash" (click)="deleteRecord(element.sno)"></i>
-
-      </td>
+      <td mat-cell *matCellDef="let element"> </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
