--- a/src/app/asset/asset-list/asset-list.component.html
+++ b/src/app/asset/asset-list/asset-list.component.html
@@ -61,9 +61,9 @@
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef> Action</th>
     <td mat-cell *matCellDef="let element">
-      <i class="action-icon fa fa-edit" (click)="editRecord(element)"></i>
+<!--      <i class="action-icon fa fa-edit" (click)="editRecord(element)"></i>-->
       <!--        <i class="action-icon fa fa-trash" (click)="deleteElement(element.sno)"></i>-->
-      <i class="action-icon fa fa-trash" (click)="deleteRecord(element.sno)"></i>
+<!--      <i class="action-icon fa fa-trash" (click)="deleteRecord(element.sno)"></i>-->
 
     </td>
   </ng-container>
