--- a/src/app/employee/employee-list/employee-list.component.html
+++ b/src/app/employee/employee-list/employee-list.component.html
@@ -1,1 +1,64 @@
-<p>employee-list works!</p>
+<table>
+  <tr>
+    <td>
+      <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)"
+               placeholder="Filter i.e. Name, Technology, etc">
+      </mat-form-field>
+    </td>
+  </tr>
+</table>
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z18">
+  <ng-container matColumnDef="empId">
+    <th mat-header-cell *matHeaderCellDef> Id</th>
+    <td mat-cell *matCellDef="let element"> {{element.empId}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="fullName">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Full Name</th>
+    <td mat-cell *matCellDef="let element"> {{element.firstName + ' ' + element.lastName}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="location">
+    <th mat-header-cell *matHeaderCellDef> Location </th>
+    <td mat-cell *matCellDef="let element"> {{element.location}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="costCenter">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> CostCenter</th>
+    <td mat-cell *matCellDef="let element"> {{element.costCenter}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="productLine">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Product Line</th>
+    <td mat-cell *matCellDef="let element"> {{element.productLine}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="jobRole">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Job Role</th>
+    <td mat-cell *matCellDef="let element"> {{element.jobRole }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="technology">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Technology</th>
+    <td mat-cell *matCellDef="let element"> {{element.technology}} </td>
+  </ng-container>
+
+
+
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef> Action</th>
+    <td mat-cell *matCellDef="let element">
+      <!--      <i class="action-icon fa fa-edit" (click)="editRecord(element)"></i>-->
+      <!--        <i class="action-icon fa fa-trash" (click)="deleteElement(element.sno)"></i>-->
+      <!--      <i class="action-icon fa fa-trash" (click)="deleteRecord(element.sno)"></i>-->
+
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+  </tr>
+</table>
+
+<mat-paginator [pageSizeOptions]="[10, 25, 100, 200]"></mat-paginator>
