--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -27,22 +27,24 @@
         <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
           Employee's <i class="fa fa-laptop" aria-hidden="true"></i><span class="caret"></span></a>
         <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-          <a class="dropdown-item waves-light" mdbWavesEffect href="/#"><i class="fa fa-list" aria-hidden="true"></i>
-            List All Employees</a>
-          <a class="dropdown-item waves-light" mdbWavesEffect href="/#"><i class="fa fa-plus" aria-hidden="true"></i>
-            Add Employee </a>
+          <a class="dropdown-item waves-light" mdbWavesEffect href="/employee/list"><i class="fa fa-list"
+                                                                                       aria-hidden="true"></i>
+            Employee Details</a>
+          <a class="dropdown-item waves-light" mdbWavesEffect href="/employee/add"><i class="fa fa-plus"
+                                                                                      aria-hidden="true"></i> Add Employee
+          </a>
         </div>
       </li>
 
       <!-- Asset Reports -->
-      <li *ngIf="isLogedIn" class="nav-item dropdown" dropdown>
+      <!--<li *ngIf="isLogedIn" class="nav-item dropdown" dropdown>
         <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
           Reports <span class="caret"></span></a>
         <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
           <a class="dropdown-item waves-light" mdbWavesEffect (click)="exportToExcel()"><i
             class="fa fa-file-excel-o" aria-hidden="true"></i> Export to Excel </a>
         </div>
-      </li>
+      </li>-->
 
       <!-- Dropdown User Logout-->
       <li class="nav-item dropdown" dropdown>
