--- a/src/app/shared/confirm-box/confirm-box.component.html
+++ b/src/app/shared/confirm-box/confirm-box.component.html
@@ -1,7 +1,7 @@
-<h1 matDialogTitle>{{title}}</h1>
-<div matDialogContent>{{message}}</div>
+<h1 matDialogTitle>{{data.title}}</h1>
+<div matDialogContent>{{data.message}}</div>
 <div matDialogActions fxLayoutAlign="space-around center">
-  <button matDialogClose md-raised-button (click)="dialogRef.close(true)">Confirm</button>
+  <button matDialogClose md-raised-button (click)="dialogRef.close(true)">Ok</button>
 
-  <button matDialogClose md-raised-button (click)="dialogRef.close()">Cancel</button>
+<!--  <button matDialogClose md-raised-button (click)="dialogRef.close()">Cancel</button>   -->
 </div>
